<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="model"
            type="com.infotech.rfid.ui.login.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/trans"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.infotech.artprt.ui.login.SignFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignCheck"
            android:text="@string/sign_check"
            android:textAppearance="@style/SignTextStyle"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llComponents"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/xmedium"
            app:layout_constraintTop_toBottomOf="@id/tvSignCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSign1"
                android:text="@string/sign_1"
                android:textAppearance="@style/SignTextStyle"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSign2"
                android:text="@string/sign_2"
                android:textAppearance="@style/SignTextStyle"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignBottom"
            android:text="@string/sign_bottom"
            android:textAppearance="@style/SignTextStyle"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/llComponents"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>