<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginErrorFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@drawable/rect_white_with_corner_small"
            android:paddingTop="@dimen/xmedium"
            android:paddingLeft="@dimen/xlbig"
            android:paddingRight="@dimen/xlbig"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivProblem"
                app:srcCompat="@drawable/ic_problem"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvValidationError"
                android:text="@string/validation_error"
                android:textAppearance="@style/SmallBoldTitleTextStyle"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/medium"
                app:layout_constraintTop_toBottomOf="@id/ivProblem"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCheckData"
                android:gravity="center"
                android:text="@string/check_data"
                android:textAppearance="@style/SmallTitleTextStyle"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/small"
                app:layout_constraintTop_toBottomOf="@id/tvValidationError"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUnderstand"
                app:textAllCaps="true"
                android:text="@string/understand"
                android:textAppearance="@style/AsButtonTextStyle"
                android:textColor="@color/blue"
                android:padding="@dimen/xmedium"
                app:layout_constraintTop_toBottomOf="@id/tvCheckData"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>




        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>